og for profiles

--- a/app/views/user/index.html
+++ b/app/views/user/index.html
@@ -1,8 +1,22 @@
 {% set templates = ['work', 'collection', 'user'] %}
 {% set pageTitle = profile.fullname %}
-
 {% set path = 'profile' %}
 {% set profile = profile.toJSON()%}
+
+{% block head %}
+	<meta property="og:site_name" content="Arte Manifiesto" />
+	<meta property="og:site" content="artemanifiesto.com" />
+	<meta property="og:title" content="Visita el portafolio de {{profile.firstname|capitalize}} {{profile.lastname|capitalize}} en Arte Manifiesto" />
+	<meta property="og:description" content="{{profile.biography}}" />
+	<meta property="og:image" content="{{profile.photo}}" />
+	<meta property="og:url" content="http://artemanifiesto.com/user/{{profile.username}}" />
+	<meta property="og:type" content="article" />
+	<meta name='twitter:card' content='summary_large_image' />
+	<meta name='twitter:image:src' content="{{profile.photo}}" />
+	<meta name='twitter:url' content='http://artemanifiesto.com/user/{{profile.username}}' />
+	<meta name='twitter:description' content='{{profile.biography}}' />
+	<meta name='twitter:title' content='Visita el portafolio de {{profile.fullname|upper}} en Arte Manifiesto' />
+{% endblock %}
 
 {% extends '../partials/base.html' %}
 
