default image changed to cover

--- a/app/views/user/index.html
+++ b/app/views/user/index.html
@@ -8,11 +8,11 @@
 	<meta property="og:site" content="artemanifiesto.com" />
 	<meta property="og:title" content="Visita el portafolio de {{profile.firstname|capitalize}} {{profile.lastname|capitalize}} en Arte Manifiesto" />
 	<meta property="og:description" content="{{profile.biography}}" />
-	<meta property="og:image" content="{{profile.photo}}" />
+	<meta property="og:image" content="{{profile.cover}}" />
 	<meta property="og:url" content="http://artemanifiesto.com/user/{{profile.username}}" />
 	<meta property="og:type" content="article" />
 	<meta name='twitter:card' content='summary_large_image' />
-	<meta name='twitter:image:src' content="{{profile.photo}}" />
+	<meta name='twitter:image:src' content="{{profile.cover}}" />
 	<meta name='twitter:url' content='http://artemanifiesto.com/user/{{profile.username}}' />
 	<meta name='twitter:description' content='{{profile.biography}}' />
 	<meta name='twitter:title' content='Visita el portafolio de {{profile.fullname|upper}} en Arte Manifiesto' />
