--- a/app/views/pages/index.html
+++ b/app/views/pages/index.html
@@ -49,29 +49,29 @@
 		<div class="grid-100 grid-parent">
 			<div class="home-grid">
 				<div class="home-grid-column">
-					<a href="/compra-y-vende-arte-en-internet-latinoamerica" class="home-grid-element">
+					<a href="{{banners[0].link}}" class="home-grid-element">
 						<div class="cover"></div>
-						<img src="http://res.cloudinary.com/arte-manifiesto/image/upload/v1450065548/general/home-gid-image-1.jpg">
+						<img src="{{banners[0].image}}">
 					</a>
-					<a href="/compra-y-vende-arte-en-internet-latinoamerica" class="home-grid-element">
+					<a href="{{banners[1].link}}" class="home-grid-element">
 						<div class="cover"></div>
-						<img src="http://res.cloudinary.com/arte-manifiesto/image/upload/v1450065548/general/home-gid-image-2.jpg">
+						<img src="{{banners[1].image}}">
 					</a>
 				</div>
 				<div class="home-grid-column tablet">
-					<a href="http://artemanifiesto.com/user/cristhianhova/" class="home-grid-element">
+					<a href="{{banners[2].link}}" class="home-grid-element">
 						<div class="cover"></div>
-						<img src="http://res.cloudinary.com/arte-manifiesto/image/upload/v1450065550/general/home-gid-image-3.jpg">
+						<img src="{{banners[2].image}}">
 					</a>
-					<a href="http://artemanifiesto.com/users/specialty/all/page-1" class="home-grid-element">
+					<a href="{{banners[3].link}}" class="home-grid-element">
 						<div class="cover"></div>
-						<img src="http://res.cloudinary.com/arte-manifiesto/image/upload/v1450065549/general/home-gid-image-4.jpg">
+						<img src="{{banners[3].image}}">
 					</a>
 				</div>
 				<div class="home-grid-column desktop">
-					<a href="https://kuestionario.typeform.com/to/VNsGbl" class="home-grid-element">
+					<a href="{{banners[4].link}}" class="home-grid-element">
 						<div class="cover"></div>
-						<img src="http://res.cloudinary.com/arte-manifiesto/image/upload/v1450065550/general/home-gid-image-5.jpg">
+						<img src="{{banners[4].image}}">
 					</a>
 				</div>
 			</div>
