add responsive blog antes de pulear

--- a/app/styles/app.min.styl
+++ b/app/styles/app.min.styl
@@ -2057,7 +2057,7 @@ white = #fff
 	text-align: center;
 	max-width 500px
 	margin auto
-	cursor pointer
+	cursor pointera
 	a
 		font-size: 16px;
 		font-size em
@@ -4454,18 +4454,21 @@ white = #fff
 		font-size 30px
 		color #3b3d40
 		line-height: 1.5;
+		padding: 0 20px;
 	h3
 		font-family: 'Montserrat',sans-serif;
 		font-weight: bold;
 		font-size: 25px;
 		color: #3b3d40;
 		line-height: 1.5;
+		padding: 0 20px;
 	p
 		font-family: 'PT Serif', serif;
 		font-size 21px
 		color #666d70
 		line-height 1.5
 		margin-bottom 20px
+		padding: 0 20px;
 		i
 			font-style: italic;
 		b
@@ -4481,6 +4484,7 @@ white = #fff
 		border-left: 4px solid #61565a
 		margin 30px 0
 		margin-left 40px
+		padding: 0 20px;
 
 
 /*------------------------------------*
