--- a/app/views/blog/index.html
+++ b/app/views/blog/index.html
@@ -35,6 +35,9 @@
       <div class="blog-single-trash" style="max-width: initial;border: none;margin-bottom: 0;">
           <a href="/blog/creator" class="button following publish-btn publish">Nuevo post</a>
           <a href="/blog/draft" class="button following preview-btn">Borradores</a>
+      <!-- <div class="blog-single-trash" style="text-align: right; max-width: initial;border: none;margin-bottom: 0;">
+          <a href="#" class="button following publish-btn publish">Nuevo post</a>
+          <a href="#" class="button following preview-btn">Borradores</a> -->
       </div>
     </div>
   </div>
