--- a/app/views/blog/index.html
+++ b/app/views/blog/index.html
@@ -10,7 +10,9 @@
   <div class="grid-container">
     <div class="grid-100">
       <header class="header-blog">
-        <div class="logo" style="visibility:hidden;">am <span>blog</span></div>
+        <div class="logo" style="">
+          <img src="http://res.cloudinary.com/arte-manifiesto/image/upload/v1454309967/general/am-blog.png">
+        </div>
         <div class="menu">
           <a href="/blog" class="item uppercase">todo</a>
           {% for category in categories %}
@@ -18,7 +20,7 @@
           {% endfor %}
         </div>
         <div class="socials">
-          <p>Síguenos:</p>
+          <p class="label">Síguenos:</p>
           <a href="https://www.facebook.com/artemanifiesto" class="bi_logo-facebook"></a>
           <a href="https://twitter.com/artemanifiesto" class="bi_logo-twitter"></a>
           <a href="https://www.instagram.com/artemanifiesto/" class="bi_logo-instagram"></a>
