--- a/app/styles/app.min.styl
+++ b/app/styles/app.min.styl
@@ -2057,10 +2057,9 @@ white = #fff
 	text-align: center;
 	max-width 500px
 	margin auto
-	cursor pointera
+	cursor pointer
 	a
 		font-size: 16px;
-		font-size em
 		color #4000ff
 
 
@@ -3994,10 +3993,16 @@ white = #fff
 *------------------------------------*/
 .header-blog
 	display flex
+	flex-direction: column;
+	align-items: center;
 	justify-content space-between
 	padding 30px 0
+	.logo
+		img
+			width: 100px;
 	.menu
 		display flex
+		margin: 20px 0;
 		.item
 			font-family: 'Montserrat',sans-serif;
 			font-weight bold
@@ -4008,6 +4013,8 @@ white = #fff
 	.socials
 		display flex
 		align-items center
+		.label
+			display none
 		p
 			font-family: 'Montserrat',sans-serif;
 			color charcoal-grey
@@ -4015,6 +4022,19 @@ white = #fff
 		a
 			color charcoal-grey
 			margin-left 25px
+
+@media (min-width: 600px)
+	.header-blog
+		flex-direction initial
+
+@media (min-width: 800px)
+	.header-blog
+		.logo
+			img
+				width: 140px;
+		.socials
+			.label
+				display block
 
 
 .blog-article
@@ -4267,6 +4287,8 @@ white = #fff
 .blog-single-socials
 	max-width 500px
 	margin 20px auto 40px auto
+	display: flex;
+	justify-content: center;
 	.tags
 		padding 20px 0
 		.tag
@@ -4280,6 +4302,8 @@ white = #fff
 			display inline-block
 	.buttons
 		padding 20px 0
+		display: inline-flex;
+		flex-direction column
 		.button
 			font-family: 'Montserrat',sans-serif;
 			font-weight bold
@@ -4289,6 +4313,7 @@ white = #fff
 			letter-spacing 2px
 			display inline-block
 			cursor pointer
+			margin-bottom 10px
 			&.white
 				border solid 1px #ededed
 				color #666
@@ -4310,6 +4335,14 @@ white = #fff
 			&.sky-blue
 				background #00adf2
 				color white
+
+
+@media (min-width: 600px)
+	.blog-single-socials
+		display: block;
+		.buttons
+			display: block;
+
 
 .blog-single-trash
 	max-width: 700px;
@@ -4346,6 +4379,7 @@ white = #fff
 
 .blog-single-user
 	display flex
+	flex-wrap: wrap;
 	align-items center
 	max-width: 700px;
 	margin 0 auto 2em auto
@@ -4380,8 +4414,16 @@ white = #fff
 		padding 10px 25px
 		border-radius 4px
 		border solid 1px #ddd
-		margin-left 20px
+		margin-left 0px
+		margin-top 10px
 		cursor pointer
+
+@media (min-width: 370px)
+	.blog-single-user
+		.button
+			margin-left: 20px;
+			margin-top: 0;
+			
 
 .blog-single-popular
 	background #27282a
