add responsibe blog menu

--- a/app/styles/app.min.styl
+++ b/app/styles/app.min.styl
@@ -4002,14 +4002,16 @@ white = #fff
 			width: 100px;
 	.menu
 		display flex
-		margin: 20px 0;
+		margin: 10px 0;
+		flex-wrap: wrap;
+		justify-content: center;
 		.item
 			font-family: 'Montserrat',sans-serif;
 			font-weight bold
 			font-size 13px
 			color charcoal-grey
 			letter-spacing 1px
-			padding 0 15px
+			padding 10px 15px
 	.socials
 		display flex
 		align-items center
