add selected class in blog menu

--- a/app/styles/app.min.styl
+++ b/app/styles/app.min.styl
@@ -4012,6 +4012,8 @@ white = #fff
 			color charcoal-grey
 			letter-spacing 1px
 			padding 10px 15px
+			&.selected
+				text-decoration: underline;
 	.socials
 		display flex
 		align-items center
