min width to blog loog

--- a/app/styles/app.min.styl
+++ b/app/styles/app.min.styl
@@ -4000,6 +4000,7 @@ white = #fff
 	.logo
 		img
 			width: 100px;
+			min-width: 100px;
 	.menu
 		display flex
 		margin: 10px 0;
@@ -4012,7 +4013,7 @@ white = #fff
 			color charcoal-grey
 			letter-spacing 1px
 			padding 10px 15px
-			&.selected
+			&.	
 				text-decoration: underline;
 	.socials
 		display flex
@@ -4036,6 +4037,7 @@ white = #fff
 		.logo
 			img
 				width: 140px;
+				min-width: 140px;
 		.socials
 			.label
 				display block
