--- a/app/views/blog/index.html
+++ b/app/views/blog/index.html
@@ -10,13 +10,15 @@
   <div class="grid-container">
     <div class="grid-100">
       <header class="header-blog">
-        <div class="logo" style="">
+        <a href="/blog">
+          <div class="logo" style="">
           <img src="http://res.cloudinary.com/arte-manifiesto/image/upload/v1454309967/general/am-blog.png">
-        </div>
+          </div>
+        </a>
         <div class="menu">
-          <a href="/blog" class="item uppercase">todo</a>
           {% for category in categories %}
-          <a href="/blog/category/{{category.nameSlugify}}" class="item uppercase">{{category.name}}</a>
+            <a href="/blog/category/{{category.nameSlugify}}"
+               class="item uppercase {{category.nameSlugify}}-blog-menu">{{category.name}}</a>
           {% endfor %}
         </div>
         <div class="socials">
