--- a/app/views/partials/elements/collection.html
+++ b/app/views/partials/elements/collection.html
@@ -12,7 +12,7 @@
             <div class="featured">AM</div>
           <% } %>
         <% } %>
-        <a href='/user/<%=User.username%>/collection/<%=nameSlugify%>'>
+        <a href='/user/<%=User.username%>/collection/<%=nameSlugify%>' target="_blank">
           <div class="collection-card-stats">
             <p><%=name%></p>
           </div>
