--- a/app/views/blog/index.html
+++ b/app/views/blog/index.html
@@ -64,7 +64,7 @@
               <div class="author u-margin-top-30">
                 <p>Por &nbsp;&nbsp;</p>
                 <img src="{{featureds[0].User.photo}}">
-                <p class="name">&nbsp;&nbsp; {% if featureds[0].User.typeName === 1 %}
+                <p class="name uppercase">&nbsp;&nbsp; {% if featureds[0].User.typeName === 1 %}
                   {{featureds[0].User.fullname}}
                 {% else %}
                   {{featureds[0].User.pseudonimo}}
