--- a/app/views/partials/discover-content.html
+++ b/app/views/partials/discover-content.html
@@ -15,7 +15,7 @@
 						<div class="am-Switch-button">
 							<i class="fa fa-bars"></i>
 						</div>
-						<span>Seleccionado AM</span>
+						<span>Obras destacadas</span>
 					</div>
 				</div>
 				<div class="am-Filter-item">
