--- a/app/views/partials/header.html
+++ b/app/views/partials/header.html
@@ -29,11 +29,11 @@
 				<div class="am-Header-new-right">
 						<ul class="options">
               {% if user %}
-                <a href="/feed" class="feed-menu">ART FEED</a>
+                <a href="/feed" class="feed-menu">ART FEED<span></span></a>
               {% endif %}
-							<a href="/works/category/all/page-1/?order=newest&featured=1" class="works-menu">OBRAS</a>
-							<a href="/users/specialty/all/page-1" class="users-menu">ARTISTAS</a>
-							<a href="/collections/category/all/page-1" class="collections-menu">COLECCIONES</a>
+							<a href="/works/category/all/page-1/?order=newest&featured=1" class="works-menu">OBRAS<span></span></a>
+							<a href="/users/specialty/all/page-1" class="users-menu">ARTISTAS<span></span></a>
+							<a href="/collections/category/all/page-1" class="collections-menu">COLECCIONES<span></span></a>
 						</ul>
 					{% if user %}
 						<ul class="socials">
