--- a/app/views/user/work/add.html
+++ b/app/views/user/work/add.html
@@ -60,7 +60,7 @@
 					</label>
 				</div>
 				<div class="switch u-margin-top-10">
-					<p class="title">NSFW</p>
+					<p class="title">+18</p>
 					<span class="value">Off</span>
 					<input type="checkbox" name="nsfw" id="nsfw"/>
 					<label for="nsfw">
