--- a/app/views/blog/post.html
+++ b/app/views/blog/post.html
@@ -40,7 +40,7 @@
 
     <div class="grid-container" style="text-align: center;">
       <div class="grid-100">
-        <a href="/blog/category/{{post.Category.nameSlugify}}" class="tag">{{ post.Category.name }}</a>
+        <a href="/blog/category/{{post.Category.nameSlugify}}" class="tag uppercase">{{ post.Category.name }}</a>
 
         <p class="title">{{ post.name }}</p>
 
@@ -86,7 +86,7 @@
         </a>
 
         <div class="info">
-          <p class="name">
+          <p class="name uppercase">
             {% if post.User.typeName === 1 %}
               {{ post.User.fullname }}
             {% else %}
