--- a/app/views/pages/works.html
+++ b/app/views/pages/works.html
@@ -38,7 +38,7 @@
 									<!-- <div class="am-Switch-button" data-state="active">
 										<i class="fa fa-bars"></i>
 									</div> -->
-									<span>Seleccionado AM</span>
+									<span>Obras destacadas</span>
 								</div>
 							</div>
 							<div class="am-Filter-item">
