--- a/app/views/partials/elements/post.html
+++ b/app/views/partials/elements/post.html
@@ -10,7 +10,7 @@
         <% } %>
         <a href="/blog/post/<%=nameSlugify%>">
           <header class="header" style="background-image: url('<%= addFilter(photo, 'w_380,h_260,c_fill') %>')">
-            <span class="tag"><%= Category.name %></span>
+            <span class="tag uppercase"><%= Category.name %></span>
             <div class="inner">
               <p class="title"><%=name%></p>
               <div class="stats u-margin-top-15">
@@ -25,11 +25,11 @@
             <span class="author">
               <p>Por&nbsp;&nbsp;</p>
               <img src="<%=User.photo%>">
-              <P>&nbsp;<% if(User.typeName === 1) { %>
+              <p class="uppercase">&nbsp;<% if(User.typeName === 1) { %>
                 <%= User.fullname %>
               <% } else { %>
                 <%= User.pseudonimo %>
-              <% } %></P>
+              <% } %></p>
             </span>
           </footer>
         </a>
