--- a/app/views/user/notifications.html
+++ b/app/views/user/notifications.html
@@ -13,6 +13,9 @@
 			</div>
 			<div class="loader extra-small gray loading hide"></div>
 		</div>
+		
+		<div class="loader extra-small gray loading"></div>
+
 	</div>
 
 {% endblock %}
