--- a/app/views/partials/base.html
+++ b/app/views/partials/base.html
@@ -94,9 +94,13 @@
 					<td></td>
 					<td><a href="/users/specialty/all/page-1">ARTISTAS</a></td>
 				</tr>
-				<tr>
+				<!-- <tr>
 					<td></td>
 					<td><a href="/collections/category/all/page-1">COLECCIONES</a></td>
+				</tr> -->
+				<tr>
+					<td></td>
+					<td><a href="/blog">BLOG</a></td>
 				</tr>
 			{% if user %}
 				<tr>
