--- a/app/views/blog/index.html
+++ b/app/views/blog/index.html
@@ -8,11 +8,11 @@
 	<meta property="og:site" content="artemanifiesto.com" />
   <meta property="og:title" content="Unete a la primera red social de artistas emergentes y almas independientes en Latinoamérica" />
   <meta property="og:description" content="La primera red social de artistas visuales y creadores de latinoamerica" />
-	<meta property="og:image" content="{{featureds[0].photo}}" />
+	<meta property="og:image" content="http://res.cloudinary.com/arte-manifiesto/image/upload/v1454618424/general/am-op-graph_eqzlok.jpg" />
 	<meta property="og:url" content="http://artemanifiesto.com/blog" />
 	<meta property="og:type" content="article" />
 	<meta name='twitter:card' content='summary_large_image' />
-	<meta name='twitter:image:src' content="{{featureds[0].photo}}" />
+	<meta name='twitter:image:src' content="http://res.cloudinary.com/arte-manifiesto/image/upload/v1454618424/general/am-op-graph_eqzlok.jpg" />
 	<meta name='twitter:url' content='http://artemanifiesto.com/blog' />
 	<meta name='twitter:description' content='La primera red social de artistas visuales y creadores de latinoamerica' />
 	<meta name='twitter:title' content='Unete a la primera red social de artistas emergentes y almas independientes en Latinoamérica' />
