--- a/app/views/partials/base.html
+++ b/app/views/partials/base.html
@@ -98,6 +98,10 @@
 					<td></td>
 					<td><a href="/collections/category/all/page-1">COLECCIONES</a></td>
 				</tr>
+				<tr>
+					<td></td>
+					<td><a href="/blog">BLOG</a></td>
+				</tr>
 			{% if user %}
 				<tr>
 					<td><i class="bi_interface-plus"></i></td>
